--- a/index.html
+++ b/index.html
@@ -3,20 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="icon" href="assets/logo.jpg" type="image/x-icon" />
     <title>Homepage</title>
   </head>
 
   <body>
     <main class="main-container">
-      <img src="./assets/logo.png" />
+      <img src="./assets/logo.jpg" />
 
       <div class="card">
         <h1 onclick="toggleSelection(this)">school</h1>
         <div class="content">
           <ul>
-            <li>mail</li>
-            <li>class</li>
-            <li>system</li>
+            <li><a href="https://outlook.office.com/mail/">ms outlook</a></li>
+            <li><a href="https://teams.microsoft.com/v2/">ms teams</a></li>
+            <li><a href="https://pregradov.usc.edu.co/">moddle</a></li>
           </ul>
         </div>
       </div>
@@ -25,9 +32,9 @@
         <h1 onclick="toggleSelection(this)">ai</h1>
         <div class="content closed">
           <ul>
-            <li>chatgpt</li>
-            <li>claude</li>
-            <li>gemini</li>
+            <li><a href="https://chatgpt.com/">chatgpt</a></li>
+            <li><a href="https://claude.ai/">claude</a></li>
+            <li><a href="https://gemini.google.com/">gemini</a></li>
           </ul>
         </div>
       </div>
@@ -36,8 +43,8 @@
         <h1 onclick="toggleSelection(this)">music</h1>
         <div class="content closed">
           <ul>
-            <li>youtube</li>
-            <li>spotify</li>
+            <li><a href="https://www.youtube.com/">youtube</a></li>
+            <li><a href="https://open.spotify.com/">spotify</a></li>
             <li>sm playlist ¿?</li>
           </ul>
         </div>
@@ -47,25 +54,43 @@
         <h1 onclick="toggleSelection(this)">stuff</h1>
         <div class="content closed">
           <ul>
-            <li>github</li>
-            <li>hackernews</li>
-            <li>x</li>
+            <li><a href="https://github.com/">github</a></li>
+            <li><a href="https://news.ycombinator.com/">hackernews</a></li>
+            <li><a href="https://x.com">x</a></li>
           </ul>
         </div>
       </div>
     </main>
-    todo: - replace claude logo 💀 - change colors - style better
   </body>
 
   <style>
+    :root {
+      --base-color: #fff4ed;
+      --text-color: #1d1d1d;
+      --accent-color: #e15b73;
+    }
+
     html,
     body {
-      height: 100%;
+      height: 100vh;
       margin: 0;
-      font-family: monospace;
+      font-family: "Roboto Mono";
+      font-weight: 400;
+      background-color: var(--base-color);
+      color: var(--text-color);
+    }
 
-      background-color: #fff4ed;
-      color: #1d1d1d;
+    .card a {
+      all: unset;
+      cursor: pointer;
+      color: var(--text-color);
+      text-decoration: underline;
+      text-underline-offset: 2px;
+      transition: all 0.3s ease;
+    }
+
+    .card a:hover {
+      color: var(--accent-color);
     }
 
     .main-container {
@@ -74,6 +99,7 @@
       align-items: center;
       justify-content: center;
       height: 100vh;
+      width: 100%;
       gap: 2rem;
     }
 
@@ -81,21 +107,28 @@
       display: flex;
       flex-direction: row;
       align-items: stretch;
-      min-height: 10rem;
+      min-height: 15rem;
       gap: 1rem;
     }
 
     .card h1 {
       writing-mode: vertical-rl;
       transform: rotate(180deg);
-      background-color: #e15b73;
+      background-color: var(--accent-color);
       margin: 0;
       padding: 0.5rem;
       font-size: 1.2rem;
+      font-weight: 400;
       align-items: center;
       justify-content: center;
       cursor: pointer;
       user-select: none;
+      transition: 0.3s ease;
+    }
+
+    .card h1:hover {
+      background-color: var(--base-color);
+      box-shadow: inset 0 0 0 2px var(--accent-color);
     }
 
     .content {
@@ -121,8 +154,7 @@
     }
 
     img {
-      max-width: 100px;
-      margin-bottom: 1rem;
+      height: 20rem;
     }
   </style>
 
