--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
             <li><a href="https://github.com/">github</a></li>
             <li><a href="https://news.ycombinator.com/">hackernews</a></li>
             <li><a href="https://x.com">x</a></li>
+            <li>
+              <a href="https://roadmap.sh/game-developer">game dev roadmap</a>
+            </li>
           </ul>
         </div>
       </div>
